<resources>
    <string name="app_name">P10演示程序</string>
    <string name="action_settings">Settings</string>
    <string name="button_opendev">打开射频模块</string>
    <string name="button_closedev">关闭射频模块</string>
    <string name="button_rfcpucard">非接CPU卡操作</string>
    <string name="button_m1card">M1卡操作</string>
    <string name="button_cleardata">清除数据</string>
    <string name="button_idcard">读身份证</string>
    <string name="button_contactcpucard">接触式CPU卡操作</string>
    <string name="button_msrcardstart">刷磁卡启动</string>
    <string name="button_msrcardstop">刷磁卡取消</string>
    <string name="button_samcard">SAM卡操作</string>
</resources>
