<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:orientation="horizontal">

        <Button
            android:id="@+id/openDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_opendev" />

        <Button
            android:id="@+id/nonAccessCpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_rfcpucard"
            tools:visibility="hh" />

        <Button
            android:id="@+id/nonAccessM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_m1card" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_closedev" />

        <Button
            android:id="@+id/clearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_cleardata" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:scrollbars="vertical"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/messageText"/>

</LinearLayout>